# testBaseAudioElevenlabs

./: .gitignore  README.md  agent2.md  pyproject.toml  test_report.md
src/eleven_tts_cli/: __init__.py  __main__.py  cli.py
src/eleven_tts_cli/adapters/: elevenlabs_api.py
src/eleven_tts_cli/core/: errors.py  models.py  services.py
testBaseAudioElevenlabs/: agent2.md  test_report.md
tests/: __init__.py  test_cli_smoke.py  test_services.py
